<?xml version="1.0" encoding="utf-8"?>
<androidx.core.view.insets.ProtectionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_protection"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:clipChildren="false"
            android:gravity="center_horizontal"
            android:translationZ="4dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
                app:toolbarId="@+id/toolbar">


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/appNameToolBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semibold"
                            android:text="SMOOTH RADIO"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etSearch"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/light_gray"
                            android:cursorVisible="true"
                            android:gravity="center_horizontal"
                            android:hint="Search..."
                            android:singleLine="true"
                            android:textCursorDrawable="@null"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/ivSearch"
                            app:layout_constraintStart_toEndOf="@id/appNameToolBar"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivClearSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackground"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="5dp"
                            android:src="@drawable/deleteicon24"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/ivSearch"
                            app:layout_constraintHorizontal_bias="0.75"
                            app:layout_constraintStart_toEndOf="@+id/etSearch"
                            app:layout_constraintStart_toStartOf="@+id/etSearch"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.666" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackground"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="5dp"
                            android:src="@drawable/outline_search_black_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintStart_toEndOf="@+id/appNameToolBar"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.6" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="280dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                app:layout_scrollFlags="enterAlways"
                app:tabIconTint="@color/white"
                app:tabIndicator="@drawable/indicatortest"
                app:tabInlineLabel="true"
                app:tabSelectedTextColor="@color/red"
                app:tabTextColor="@color/black">

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager2.widget.ViewPager2>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/mini_player"
            layout="@layout/mini_player_layout"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:behavior_hideable="true"
            app:behavior_peekHeight="110dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.view.insets.ProtectionLayout>