<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="600dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mini_player_background" />

    <ImageView
        android:id="@+id/ivLogoMiniPlayerLayout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@id/imageView5"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/ivLogoMiniPlayerLayout"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tvStationNameMiniPlayerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvStatusMiniPlayerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivPlayMiniPlayerLayout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        android:src="@drawable/playicon"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnimationMiniPlayerLayout"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ivPlayMiniPlayerLayout"
        app:layout_constraintEnd_toEndOf="@+id/ivPlayMiniPlayerLayout"
        app:layout_constraintStart_toStartOf="@+id/ivPlayMiniPlayerLayout"
        app:layout_constraintTop_toTopOf="@+id/ivPlayMiniPlayerLayout"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading2" />

</androidx.constraintlayout.widget.ConstraintLayout>